<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_upload"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_upload" />
    <item
        android:id="@+id/menu_reload_names"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_reload_names" />
    <item
        android:id="@+id/menu_select_all"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_select_all" />
    <item
        android:id="@+id/menu_clear"
        android:title="@string/menu_clear_title">
    </item>
    <item
        android:id="@+id/menu_settings"
        android:menuCategory="secondary"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings_title"/>

</menu>

